[package]
name = "pi-tetration"
version = "0.1.0"
edition = "2021"
authors = ["Ferdinand Keller"]
description = "A simple CLI tool to compute the last digits of n^n^n^n."
keywords = ["rust", "cli", "pi", "tetration", "mattparker"]
license = "MIT"

[dependencies]
num-bigint = "0.4"
num-format = { version = "0.4", features = ["with-num-bigint"] }
clap = { version = "4.0", features = ["derive"] }
